# sustainable-transportation

./: .gitattributes  .gitignore  NewYorkManhattan.id_map.txt  NewYorkState.vrp  README.md  Working_results  newyork.id_map.txt  results_all_1_fleet_1_weight.txt  results_initial.txt  vis_routes_map.html
RoutingBlocks-develop/bindings/: CMakeLists.txt
pysolver/: __main__.py  finetuned_params.json  requirements.txt
pysolver/construction/: insertion.py  random.py  savings.py
pysolver/instance/: interface.py  models.py  ny_routes_spilt.py  ny_vrp_make.py  parsing.py  parsing_csv.py  test_instance.py  vrp_make.py
pysolver/ls/: __init__.py
pysolver/metaheuristic/: __init__.py  ils.py
pysolver/utils/: plot.py  plot_map.py
pysolver/utils/city_maps/: newyork_network.graphml
resources/data/: NewYorkManhattan.routes  NewYorkState.routes  city_configs.json  city_configs_catalog.json  city_configs_initial.json  fleet_catalog.json  merge_nodes.py  newyork.nodes  newyork.routes
resources/instances/: source
resources/instances/UchoaEtAl/: X-n1001-k43.vrp  X-n200-k36.vrp  X-n204-k19.vrp  X-n599-k92.vrp
resources/instances/test_instances/: NewYorkManhattan.vrp  NewYorkState.id_map.txt  NewYorkState.vrp  newyork.id_map.txt  newyork.vrp  newyork_manhattan.vrp  paris.vrp  (+4 more)
routingblocks-bais-as/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
routingblocks-bais-as/cmake/: CPM.cmake
routingblocks-bais-as/routingblocks_bais_as/: __init__.py
routingblocks-bais-as/src/: CVRPEvaluation.cpp  HFVRPEvaluation.cpp
routingblocks-bais-as/tools/: README.md  stubgen.py
