[build-system]
requires = ["scikit-build-core>=0.2.1", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "routingblocks-bais-as"
version = "0.1.2"
description = "Extension of the routingblocks package including adaptions used in Advanced Seminar offered by the BAIS chair at TUM School of Management"
readme = "README.md"
authors = []
dependencies = [
    "routingblocks"
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[tool.cibuildwheel]
build = ["cp*-manylinux_x86_64", "cp*-win32", "cp*-win_amd64", "cp*-macosx_*"]
build-verbosity = 1
